--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                               <center>
                               <div class="homepage" align="center">
                                <br>
-                                <h1> Come Join Us<span class="highlightColor"> March 27</span> </h1>
+                                <h1> Come Join Us<span class="highlightColor"> <br>March 27</span> </h1>
                                 <br>
                               <p>Startup & Tech Mixer returns <span class="highlightColor">March 27th l 6-10pm l W Hotel SF</span><br>Get your ticket before the price goes up!<br>
                               <a href=https://www.eventbrite.com/e/startup-tech-mixer-tickets-15053811355" class="button normal reverted">Check Out the Event</a>
